--- a/templates/R/mypackage/DESCRIPTION
+++ b/templates/R/mypackage/DESCRIPTION
@@ -9,3 +9,6 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.1
+Suggests: knitr, rmarkdown
+VignetteBuilder: knitr
