--- a/.gitignore
+++ b/.gitignore
@@ -196,10 +196,11 @@ dmypy.json
 .pyre/
 
 # End of https://www.gitignore.io/api/python,pycharm
+
+
+# R additional
 .Rproj.user
 
-^.*\.Rproj$
-^\.Rproj\.user$
 
 # Mac specific
 .DS_Store
