--- a/templates/R/mypackage/DESCRIPTION
+++ b/templates/R/mypackage/DESCRIPTION
@@ -10,5 +10,8 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Suggests: knitr, rmarkdown
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 2.1.0)
 VignetteBuilder: knitr
