--- a/_output.yml
+++ b/_output.yml
@@ -1,11 +1,12 @@
 bookdown::gitbook:
+  split_by: section+number
   css: style.css
   config:
     toc:
       before: |
-        <li><a href="./">A Minimal Book Example</a></li>
+        <li><a href="./">Best Practices in Writing Reproducible Code</a></li>
       after: |
-        <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
+        <li><a href="https://github.com/UtrechtUniversity/workshop-computational-reproducibility" target="blank">Published with bookdown</a></li>
     download: ["pdf", "epub"]
 bookdown::pdf_book:
   includes:
