--- a/book/_quarto.yml
+++ b/book/_quarto.yml
@@ -42,8 +42,9 @@ book:
         - archiving-and-publishing.qmd
     - reproducibility-check.qmd
     - references.qmd
-  repo-url: https://github.com/UtrechtUniversity/workshop-computational-reproducibility
+  repo-url: https://github.com/UtrechtUniversity/workshop-computational-reproducibility/
   repo-subdir: book
+  issue-url: https://github.com/UtrechtUniversity/workshop-computational-reproducibility/new
   repo-actions: [edit, issue, source]
   #sidebar:
   #  logo: ../images/python-hex-logo.png # not there yet
