--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,6 +53,7 @@ jobs:
           packages: |
             any::knitr
             any::rmarkdown
+            any::reticulate
 
       - name: Setup Pages
         uses: actions/configure-pages@v1
