--- a/book/slides/_metadata.yml
+++ b/book/slides/_metadata.yml
@@ -4,6 +4,7 @@ format:
     progress: true
     width: 1920
     height: 1080
+    margin: 0.1
     embed-resources: true
     slide-number: true
     navigation-mode: linear
